# tensorrt-nnarch

./: .gitignore
alexnet/: CMakeLists.txt  README.md  convert_weights.py
alexnet/src/: main.cu
batchnorm2d/: CMakeLists.txt  README.md  convert_weight.py
batchnorm2d/src/: main.cu
include/: network.hpp
